--- a/HealthDrops/AndroidManifest.xml
+++ b/HealthDrops/AndroidManifest.xml
@@ -13,10 +13,11 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
     <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/minihd"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
